src/objects/Naads_Advisory_Form_Metrics__c.object
<CustomObject>
    <description>Keeps track of certain metrics based on the Advisory service forms survey</description>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Naads Advisory Form Metrics</relationshipLabel>
        <relationshipName>Naads_Advisory_Form_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <label>Subcounty</label>
        <picklist>
            <picklistValues>
                <fullName>Atiira</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadungulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pingire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugondo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kateta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serere Town Council</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kasilo Town council</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Service provider monthly visit schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer group training record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisory visiting report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attendance sheet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Naads Advisory Form Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Naads Advisory Form Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>